# Benchmark_LLM

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  set_venv.bat  set_venv.sh  trust_me_bro.sh
DB/: benchamrks.db  benchmarks.db  createtable.sql
benchmark/: data.py  pyproject.toml
benchmarks/: pyproject.toml
db/: create_db.sql  db_benchmark.db
