[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Daniel Kleczynski <danielkleczynski@gmial.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiohttp = { extras = ["speedups"], version = "^3.9.2" }
pydantic = "^2.5.1"
langchain = "^0.1.11"
openai = "^1.0.0rc3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
