[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Kleczyk <mailnasyff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
aiohttp = {extras = ["speedups"], version = "^3.9.0"}
pydantic = "^2.5.1"
langchain = "^0.0.329"
openai = "^1.0.0rc3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
